--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,23 @@
             "email": "jbrauer.inc@gmail.com"
         }
     ],
-    "require": {},
+    "scripts": {
+      "tests": "phpunit --configuration='./phpunit.xml' --test-suffix='.spec.php' --color=always ./tests/"
+    },
+    "require": {
+      "php": ">=5.6.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.1"
+    },
+    "autoload": {
+      "psr-4": {
+        "Cronitor\\": "src/"
+      }
+    },
+    "autoload-dev": {
+      "psr-4": {
+        "Cronitor\\Tests\\": "tests/"
+      }
     }
 }
