--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,32 @@
 {
-    "name": "jordanbrauer/cronitor-php",
-    "description": "A small wrapper object for Cronitor.io cron job monitoring service.",
-    "version": "1.0.0",
-    "type": "plugin",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Jordan Brauer",
-            "email": "jbrauer.inc@gmail.com"
-        }
-    ],
-    "require": {}
+  "name": "jordanbrauer/cronitor-php",
+  "description": "A small wrapper object for Cronitor.io cron job monitoring service.",
+  "version": "1.0.0",
+  "type": "plugin",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Jordan Brauer",
+      "email": "jbrauer.inc@gmail.com"
+    }
+  ],
+  "scripts": {
+    "tests": "phpunit --configuration='./phpunit.xml' --test-suffix='.spec.php' --color=always ./tests/"
+  },
+  "require": {
+    "php": ">=7.0.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.1"
+  },
+  "autoload": {
+    "psr-0": {
+      "Cronitor\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Cronitor\\Tests\\": "tests/"
+    }
+  }
 }
