--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-  "name": "jordanbrauer/cronitor-php",
-  "description": "A small wrapper object for Cronitor.io cron job monitoring service.",
-  "version": "0.1.1",
-  "type": "plugin",
+  "name": "jordanbrauer/cronitor-sdk",
+  "description": "A fully featured PHP SDK for the cron job monitoring service, Cronitor.io",
+  "type": "library",
   "license": "MIT",
   "authors": [
     {
@@ -11,22 +10,28 @@
     }
   ],
   "scripts": {
-    "tests": "phpunit --configuration='./phpunit.xml' --test-suffix='.spec.php' --color=always ./tests/"
+    "test": "phpunit --configuration='./phpunit.xml' --test-suffix='.spec.php' --color=always ./tests/",
+    "coverage": "phpunit --coverage-text --configuration='./phpunit.xml' --test-suffix='.spec.php' --color=always ./tests/"
   },
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.0",
+    "guzzlehttp/guzzle": "^6.3",
+    "symfony/serializer": "^3.4",
+    "symfony/property-access": "^3.4",
+    "symfony/property-info": "^3.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.1"
+    "phpunit/phpunit": "^6.5",
+    "symfony/var-dumper": "^3.4"
   },
   "autoload": {
-    "psr-0": {
-      "Cronitor\\": "src/"
+    "psr-4": {
+      "Cronitor\\": "src/Cronitor"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Cronitor\\Tests\\": "tests/"
+      "Cronitor\\Tests\\": "tests"
     }
   }
 }
