--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "guzzlehttp/guzzle": "^6.3",
     "symfony/serializer": "^3.4",
     "symfony/property-access": "^3.4",
-    "symfony/property-info": "^3.4"
+    "symfony/property-info": "^3.4",
+    "symfony/options-resolver": "^3.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.5",
